--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@loadable/component": "^5.7.0",
     "@loadable/server": "^5.9.0",
     "bluebird": "^3.4.6",
+    "clsx": "^1.0.4",
     "electrode-archetype-react-app": "7.0.0-beta7.0",
     "electrode-confippet": "^1.5.0",
     "electrode-cookies": "^1.0.0",
@@ -51,7 +52,12 @@
     "good-console": "^7.1.0",
     "inert": "^5.1.2",
     "lodash": "^4.17.11",
+    "polished": "^3.5.1",
+    "@material-ui/core": "^4.5.2",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.50",
     "milligram": "^1.3.0",
+    "ramda": "^0.26.1",
     "react-notify-toast": "^0.5.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2"
